// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/input-number/demo/basic.md correctly 1`] = `
<div
  class="ant-input-number"
>
  <span
    class="ant-input-wrapper ant-input-has-label ant-input-has-suffix"
  >
    <div
      class="ant-input-content"
    >
      <div
        class="ant-input-label"
      >
        数字
      </div>
      <div
        class="ant-input-rendered-wrapper"
      >
        <div
          class="ant-input-rendered"
        >
          <div
            class="ant-input-placeholder"
          />
          <input
            autocomplete="off"
            class="ant-input"
            max="10"
            min="1"
            step="1"
            type="text"
            value="3"
          />
        </div>
        <span
          class="ant-input-suffix"
        >
          <div
            class="ant-input-number-handler-wrap"
          >
            <span
              aria-disabled="false"
              aria-label="Increase Value"
              class="ant-input-number-handler ant-input-number-handler-up "
              role="button"
              unselectable="unselectable"
            >
              <i
                class="icon icon-baseline-arrow_drop_up ant-input-number-handler-up-inner"
                unselectable="unselectable"
              />
            </span>
            <span
              aria-disabled="false"
              aria-label="Decrease Value"
              class="ant-input-number-handler ant-input-number-handler-down "
              role="button"
              unselectable="unselectable"
            >
              <i
                class="icon icon-baseline-arrow_drop_down ant-input-number-handler-down-inner"
                unselectable="unselectable"
              />
            </span>
          </div>
        </span>
      </div>
    </div>
    <div
      class="ant-input-underline"
    >
      <span
        class="ant-input-ripple"
      />
    </div>
  </span>
</div>
`;

exports[`renders ./components/input-number/demo/digit.md correctly 1`] = `
<div
  class="ant-input-number"
>
  <span
    class="ant-input-wrapper ant-input-has-label ant-input-has-suffix"
  >
    <div
      class="ant-input-content"
    >
      <div
        class="ant-input-label"
      >
        小数
      </div>
      <div
        class="ant-input-rendered-wrapper"
      >
        <div
          class="ant-input-rendered"
        >
          <div
            class="ant-input-placeholder"
          />
          <input
            autocomplete="off"
            class="ant-input"
            max="10"
            min="0"
            step="0.1"
            type="text"
            value=""
          />
        </div>
        <span
          class="ant-input-suffix"
        >
          <div
            class="ant-input-number-handler-wrap"
          >
            <span
              aria-disabled="false"
              aria-label="Increase Value"
              class="ant-input-number-handler ant-input-number-handler-up "
              role="button"
              unselectable="unselectable"
            >
              <i
                class="icon icon-baseline-arrow_drop_up ant-input-number-handler-up-inner"
                unselectable="unselectable"
              />
            </span>
            <span
              aria-disabled="false"
              aria-label="Decrease Value"
              class="ant-input-number-handler ant-input-number-handler-down "
              role="button"
              unselectable="unselectable"
            >
              <i
                class="icon icon-baseline-arrow_drop_down ant-input-number-handler-down-inner"
                unselectable="unselectable"
              />
            </span>
          </div>
        </span>
      </div>
    </div>
    <div
      class="ant-input-underline"
    >
      <span
        class="ant-input-ripple"
      />
    </div>
  </span>
</div>
`;

exports[`renders ./components/input-number/demo/disabled.md correctly 1`] = `
<div>
  <div
    class="ant-input-number"
  >
    <span
      class="ant-input-wrapper ant-input-disabled ant-input-has-label ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-label"
        >
          禁用
        </div>
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            />
            <input
              autocomplete="off"
              class="ant-input"
              disabled=""
              max="10"
              min="1"
              step="1"
              type="text"
              value="3"
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <div
              class="ant-input-number-handler-wrap"
            >
              <span
                aria-disabled="true"
                aria-label="Increase Value"
                class="ant-input-number-handler ant-input-number-handler-up "
                role="button"
                unselectable="unselectable"
              >
                <i
                  class="icon icon-baseline-arrow_drop_up ant-input-number-handler-up-inner"
                  unselectable="unselectable"
                />
              </span>
              <span
                aria-disabled="true"
                aria-label="Decrease Value"
                class="ant-input-number-handler ant-input-number-handler-down "
                role="button"
                unselectable="unselectable"
              >
                <i
                  class="icon icon-baseline-arrow_drop_down ant-input-number-handler-down-inner"
                  unselectable="unselectable"
                />
              </span>
            </div>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </div>
  <div
    style="margin-top:20px"
  >
    <button
      class="ant-btn ant-btn-primary ant-btn-flat"
      type="button"
    >
      <span>
        Toggle disabled
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/input-number/demo/formatter.md correctly 1`] = `
<div>
  <div
    class="ant-input-number"
  >
    <span
      class="ant-input-wrapper ant-input-has-label ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-label"
        >
          金额
        </div>
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            />
            <input
              autocomplete="off"
              class="ant-input"
              min="-9007199254740991"
              step="1"
              type="text"
              value="$ 1,000"
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <div
              class="ant-input-number-handler-wrap"
            >
              <span
                aria-disabled="false"
                aria-label="Increase Value"
                class="ant-input-number-handler ant-input-number-handler-up "
                role="button"
                unselectable="unselectable"
              >
                <i
                  class="icon icon-baseline-arrow_drop_up ant-input-number-handler-up-inner"
                  unselectable="unselectable"
                />
              </span>
              <span
                aria-disabled="false"
                aria-label="Decrease Value"
                class="ant-input-number-handler ant-input-number-handler-down "
                role="button"
                unselectable="unselectable"
              >
                <i
                  class="icon icon-baseline-arrow_drop_down ant-input-number-handler-down-inner"
                  unselectable="unselectable"
                />
              </span>
            </div>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </div>
  <div
    class="ant-input-number"
  >
    <span
      class="ant-input-wrapper ant-input-has-label ant-input-has-suffix"
    >
      <div
        class="ant-input-content"
      >
        <div
          class="ant-input-label"
        >
          百分比
        </div>
        <div
          class="ant-input-rendered-wrapper"
        >
          <div
            class="ant-input-rendered"
          >
            <div
              class="ant-input-placeholder"
            />
            <input
              autocomplete="off"
              class="ant-input"
              max="100"
              min="0"
              step="1"
              type="text"
              value="100%"
            />
          </div>
          <span
            class="ant-input-suffix"
          >
            <div
              class="ant-input-number-handler-wrap"
            >
              <span
                aria-disabled="true"
                aria-label="Increase Value"
                class="ant-input-number-handler ant-input-number-handler-up ant-input-number-handler-up-disabled"
                role="button"
                unselectable="unselectable"
              >
                <i
                  class="icon icon-baseline-arrow_drop_up ant-input-number-handler-up-inner"
                  unselectable="unselectable"
                />
              </span>
              <span
                aria-disabled="false"
                aria-label="Decrease Value"
                class="ant-input-number-handler ant-input-number-handler-down "
                role="button"
                unselectable="unselectable"
              >
                <i
                  class="icon icon-baseline-arrow_drop_down ant-input-number-handler-down-inner"
                  unselectable="unselectable"
                />
              </span>
            </div>
          </span>
        </div>
      </div>
      <div
        class="ant-input-underline"
      >
        <span
          class="ant-input-ripple"
        />
      </div>
    </span>
  </div>
</div>
`;
